--- a/commands/CMakeLists.txt
+++ b/commands/CMakeLists.txt
@@ -2,3 +2,4 @@ add_subdirectory(ls_cmd)
 add_subdirectory(test_cmd)
 add_subdirectory(cat_cmd)
 add_subdirectory(xargs_cmd)
+add_subdirectory(touch_cmd)
