--- a/commands/CMakeLists.txt
+++ b/commands/CMakeLists.txt
@@ -3,3 +3,4 @@ add_subdirectory(test_cmd)
 add_subdirectory(cat_cmd)
 add_subdirectory(xargs_cmd)
 add_subdirectory(touch_cmd)
+add_subdirectory(mkdir_cmd)
