实现了cp[-r]，优化了项目结构

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,24 +1,26 @@
 cmake_minimum_required(VERSION 3.10.0)
 project(SimpleShell VERSION 0.1.0 LANGUAGES C CXX)
 
-
 include_directories(${CMAKE_SOURCE_DIR}/include)
 
 set(SRC_FILES
     src/main.cpp
-    src/build_in.cpp
 )
 set (COMMAND_PATH "${CMAKE_SOURCE_DIR}/bin/commands")                                 
 configure_file(
     "${CMAKE_SOURCE_DIR}/include/build_in.h.in"
     "${CMAKE_SOURCE_DIR}/include/build_in.h"
-
 )      
+
+add_library(build_in_basic STATIC 
+    src/build_in.cpp
+)
 
 add_subdirectory(commands)
 add_executable(SimpleShell_main ${SRC_FILES})
 
 target_link_libraries(SimpleShell_main readline)
+target_link_libraries(SimpleShell_main build_in_basic)
 
 set(INSTALL_BIN_DIR ${CMAKE_SOURCE_DIR}/bin)
 
@@ -32,6 +34,7 @@ install(TARGETS
     xargs
     touch
     mkdir
+    cp
     DESTINATION ${INSTALL_BIN_DIR}/commands
 )
 
