--- a/commands/CMakeLists.txt
+++ b/commands/CMakeLists.txt
@@ -11,8 +11,11 @@ add_subdirectory(mkdir_cmd)
 add_subdirectory(cp_cmd)
 add_subdirectory(rm_cmd)
 add_subdirectory(mv_cmd)
-
+add_subdirectory(less_cmd)
+add_subdirectory(ln_cmd)
 
 target_include_directories(cp PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/include)
 target_include_directories(rm PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/include)
 target_include_directories(mv PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/include)
+target_include_directories(less PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/include)
+target_include_directories(ln PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/include)
